--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -193,6 +193,12 @@ body {
 @media (max-width: 768px) {
     .login-container {
         flex-direction: column;
+        align-items: center;
+        height: 100vh;
+        padding: 0 50px;
+        background-color: rgba(255, 255, 255, 0.8);
+        background-size: cover;
+        background-image: url('../assets/White\ Modern\ Mobile\ Wallpaper\ \(2\).png');
     }
     .left {
         width: 100%;
