--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -198,7 +198,7 @@ body {
         padding: 0 50px;
         background-color: rgba(255, 255, 255, 0.8);
         background-size: cover;
-        background-image: url('../assets/White\ Modern\ Mobile\ Wallpaper\ \(2\).png');
+        background-image: url('../assets/White\ Modern\ Mobile\ Wallpaper.png');
     }
     .left {
         width: 100%;
