--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -250,6 +250,7 @@ body {
     }
     .logo p {
         font-size: 28px;
+        font-weight: bold;
     }
     .form-group label {
         font-size: 5vw;
